# task_manager

./: alembic.ini  compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 876a032b8e56_add_comment_model.py
src/task_service/: app.py  arq_worker.py
src/task_service/api/: comments.py  tasks.py
src/task_service/core/providers/: setup.py
src/task_service/domain/metrics/: use_case.py
src/task_service/domain/use_cases/: create_comment.py  create_task.py  delete_task.py  get_task_comments.py  get_task_statistics.py  get_tasks.py  update_task.py
src/task_service/infrastructure/postgres/: base.py  comment_repository.py  models.py  task_repository.py
src/task_service/infrastructure/redis/: auto_escalate_tasks.py  repository.py
src/task_service/schemas/: comment.py  task.py
src/task_service/schemas/api/: comments.py  tasks.py
tests/: conftest.py  mocks.py
tests/infrastructure/postgres/: test_repository.py
